<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium_italic"
        android:text="What are you interested in today?"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnCyber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCyber"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:backgroundTint="@color/opay_green"
        android:text="@string/cyber"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAI"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/ai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCyber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnCyber"
        app:layout_constraintTop_toBottomOf="@+id/btnCyber"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/btnSoftwareEng"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="284dp"
        android:backgroundTint="@color/pink"
        android:text="@string/software"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnAI"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnAI"
        app:layout_constraintTop_toBottomOf="@+id/btnAI"
        app:layout_constraintVertical_bias="0.127" />

    <Button
        android:id="@+id/btnNetworking"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/network"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSoftwareEng"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSoftwareEng"
        app:layout_constraintTop_toBottomOf="@+id/btnSoftwareEng"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/btnDataScience"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue"
        android:text="@string/data_science"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnNetworking"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNetworking"
        app:layout_constraintTop_toBottomOf="@+id/btnNetworking"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/btnUI"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="@string/ui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnDataScience"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnDataScience"
        app:layout_constraintTop_toBottomOf="@+id/btnDataScience"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnUI"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="@+id/btnUI"
        app:layout_constraintTop_toBottomOf="@+id/btnUI"
        app:layout_constraintVertical_bias="0.829" />

    <Button
        android:id="@+id/btnOffline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/offline"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btnUI"
        app:layout_constraintVertical_bias="0.361" />

    <Button
        android:id="@+id/btnSavedPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/saved_preferences"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btnUI"
        app:layout_constraintVertical_bias="0.361" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Help"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/btnSavedPreferences"
        app:layout_constraintStart_toStartOf="@+id/btnOffline"
        app:layout_constraintTop_toBottomOf="@+id/btnOffline" />


</androidx.constraintlayout.widget.ConstraintLayout>